samples/_failures_safe/1761657082_42cc7a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e3dcfed6.c: In function ‘main’:
./samples/SAFE/__tmp_e3dcfed6.c:179:25: error: missing terminating " character
  179 |         fprintf(stderr, "Failed
      |                         ^~~~~~~
./samples/SAFE/__tmp_e3dcfed6.c:179:9: error: expected expression at end of input
  179 |         fprintf(stderr, "Failed
      |         ^~~~~~~
./samples/SAFE/__tmp_e3dcfed6.c:179:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e3dcfed6.c:179:9: error: expected declaration or statement at end of input
